Infrastructure/post_nsg.template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string"
    },
    "networkSecurityGroupName": {
      "type": "string"
    },
    "functtionsAppName": {
      "type": "String"
    },
    "vnetSettings": {
      "type": "object"
    },
    "onpremESPDB": {
      "type": "object"
    },
    "DenyAllVNetOutBoundToLasVegassettings": {
      "type": "object"
    },
    "outbounddestinations": {
      "type": "object"
    },
    "tagsArray": {
      "type": "object"
    }
  },
  "variables": {
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('networkSecurityGroupName')]",
      "apiVersion": "2020-05-01",
      "location": "[parameters('location')]",
      "tags": "[parameters('tagsArray')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow_AzureLoadBalancer",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAppSvcSubnetToOnPremESPDatabase",
            "properties": {
              "description": "Allow API app service subnet to connect to database server pv-dv-vs1033.sw.local 10.244.144.124 on-prem.",
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('vnetSettings').appTierSubnetAddessPrefix]",
              "destinationAddressPrefix": "[parameters('onpremESPDB').onpremESPDBIP]",
              "access": "Allow",
              "priority": 200,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "[parameters('onpremESPDB').port_1]",
                "[parameters('onpremESPDB').port_2]"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
           {
            "name": "AllowFunctionAppSubnetToOnPremESPDatabase",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('vnetSettings').amntmmfuncsn]",
              "destinationAddressPrefix": "[parameters('onpremESPDB').onpremESPDBIP]",
              "access": "Allow",
              "priority": 210,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "[parameters('onpremESPDB').port_1]",
                "[parameters('onpremESPDB').port_2]"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAllAzureStorageOutBound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[parameters('outbounddestinations').storageregion]",
              "access": "Allow",
              "priority": 220,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAzureSqlWest2OutBound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[parameters('outbounddestinations').sqlregion]",
              "access": "Allow",
              "priority": 230,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowCosmosDBWest2OutBound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "[parameters('outbounddestinations').cosmosDBregion]",
              "access": "Allow",
              "priority": 240,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAzureResourceManagerOutBound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureResourceManager",
              "access": "Allow",
              "priority": 250,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowFunctionAppSCMOutBound",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "[reference(resourceId('Microsoft.Web/sites', parameters('functtionsAppName')), '2016-03-01', 'Full').properties.inboundIpAddress]",
              "access": "Allow",
              "priority": 260,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowSitemapAPISubnetToOnPremESPDatabase",
            "properties": {
              "description": "Allow Sitemap API app service subnet to connect to database server pv-dv-vs1033.sw.local 10.244.144.124 on-prem.",
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('vnetSettings').sitemapAPISubnetAddessPrefix]",
              "destinationAddressPrefix": "[parameters('onpremESPDB').onpremESPDBIP]",
              "access": "Allow",
              "priority": 270,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "[parameters('onpremESPDB').port_1]",
                "[parameters('onpremESPDB').port_2]"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowordermanagementSubnetToOnPremESPDatabase",
            "properties": {
              "description": "Allow ordermanagement app service subnet to connect to database server pv-dv-vs1033.sw.local 10.244.144.124 on-prem.",
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('vnetSettings').ordermanagementSubnetAddessPrefix]",
              "destinationAddressPrefix": "[parameters('onpremESPDB').onpremESPDBIP]",
              "access": "Allow",
              "priority": 280,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "[parameters('onpremESPDB').port_1]",
                "[parameters('onpremESPDB').port_2]"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowclientdataSubnetToOnPremESPDatabase",
            "properties": {
              "description": "Allow clientdata app service subnet to connect to database server pv-dv-vs1033.sw.local 10.244.144.124 on-prem.",
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('vnetSettings').clientdataSubnetAddessPrefix]",
              "destinationAddressPrefix": "[parameters('onpremESPDB').onpremESPDBIP]",
              "access": "Allow",
              "priority": 281,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "[parameters('onpremESPDB').port_1]",
                "[parameters('onpremESPDB').port_2]"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowreferencedataSubnetToOnPremESPDatabase",
            "properties": {
              "description": "Allow referencedata app service subnet to connect to database server pv-dv-vs1033.sw.local 10.244.144.124 on-prem.",
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('vnetSettings').referencedataSubnetAddessPrefix]",
              "destinationAddressPrefix": "[parameters('onpremESPDB').onpremESPDBIP]",
              "access": "Allow",
              "priority": 282,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "[parameters('onpremESPDB').port_1]",
                "[parameters('onpremESPDB').port_2]"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowstaffSubnetToOnPremESPDatabase",
            "properties": {
              "description": "Allow staff app service subnet to connect to database server pv-dv-vs1033.sw.local 10.244.144.124 on-prem.",
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "[parameters('vnetSettings').staffSubnetAddessPrefix]",
              "destinationAddressPrefix": "[parameters('onpremESPDB').onpremESPDBIP]",
              "access": "Allow",
              "priority": 283,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "[parameters('onpremESPDB').port_1]",
                "[parameters('onpremESPDB').port_2]"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAzureMonitorOutbound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureMonitor",
              "access": "Allow",
              "priority": 290,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAppInsightsOutbound",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "ApplicationInsightsAvailability",
              "access": "Allow",
              "priority": 300,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowAzureActionGroupOutbound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "ActionGroup",
              "access": "Allow",
              "priority": 320,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },
          {
            "name": "AllowIdPOutbound",
            "properties": {
              "protocol": "TCP",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "13.107.246.13",
              "access": "Allow",
              "priority": 330,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          },           
          {
            "name": "DenyAllVNetOutBoundToLasVegas",
            "properties": {
              "description": "Deny all traffic from VNet to on-prem Las Vegas datacenter",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "access": "Deny",
              "priority": 4086,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [
                "[parameters('DenyAllVNetOutBoundToLasVegassettings').LasVegasip_1]",
                "[parameters('DenyAllVNetOutBoundToLasVegassettings').LasVegasip_2]"
              ]
            }
          },
          {
            "name": "DenyAllInternetOutBound",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 4096,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
            }
          }
        ]
      }
    }
  ]
}
